// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textUnderlineColor renders 0 1`] = `
Array [
  .c0 {
  text-underline-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineColor renders function 1`] = `
Array [
  .c0 {
  text-underline-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineColor renders invalid theme path 1`] = `
Array [
  .c0 {
  text-underline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineColor renders negative number 1`] = `
Array [
  .c0 {
  text-underline-color: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineColor renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-underline-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-color: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-underline-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-underline-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineColor renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-underline-color: July;
}

@media May {
  .c0 {
    text-underline-color: August;
  }
}

@media April {
  .c0 {
    text-underline-color: September;
  }
}

@media January {
  .c0 {
    text-underline-color: November;
  }
}

@media April {
  .c0 {
    text-underline-color: August;
  }
}

@media June {
  .c0 {
    text-underline-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: July;
}

@media May {
  .c0 {
    text-underline-color: August;
  }
}

@media April {
  .c0 {
    text-underline-color: September;
  }
}

@media January {
  .c0 {
    text-underline-color: November;
  }
}

@media April {
  .c0 {
    text-underline-color: August;
  }
}

@media June {
  .c0 {
    text-underline-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-color: November;
  }
}

@media April {
  .c0 {
    text-underline-color: January;
  }
}

@media January {
  .c0 {
    text-underline-color: December;
  }
}

@media April {
  .c0 {
    text-underline-color: April;
  }
}

@media June {
  .c0 {
    text-underline-color: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-color: November;
  }
}

@media April {
  .c0 {
    text-underline-color: January;
  }
}

@media January {
  .c0 {
    text-underline-color: December;
  }
}

@media April {
  .c0 {
    text-underline-color: April;
  }
}

@media June {
  .c0 {
    text-underline-color: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineColor renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-underline-color: July;
  }
}

@media April {
  .c0 {
    text-underline-color: August;
  }
}

@media January {
  .c0 {
    text-underline-color: September;
  }
}

@media April {
  .c0 {
    text-underline-color: November;
  }
}

@media June {
  .c0 {
    text-underline-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-underline-color: July;
  }
}

@media April {
  .c0 {
    text-underline-color: August;
  }
}

@media January {
  .c0 {
    text-underline-color: September;
  }
}

@media April {
  .c0 {
    text-underline-color: November;
  }
}

@media June {
  .c0 {
    text-underline-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-color: January;
  }
}

@media April {
  .c0 {
    text-underline-color: December;
  }
}

@media January {
  .c0 {
    text-underline-color: April;
  }
}

@media April {
  .c0 {
    text-underline-color: May;
  }
}

@media June {
  .c0 {
    text-underline-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-color: January;
  }
}

@media April {
  .c0 {
    text-underline-color: December;
  }
}

@media January {
  .c0 {
    text-underline-color: April;
  }
}

@media April {
  .c0 {
    text-underline-color: May;
  }
}

@media June {
  .c0 {
    text-underline-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineColor renders postitive number 1`] = `
Array [
  .c0 {
  text-underline-color: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineColor renders string 1`] = `
Array [
  .c0 {
  text-underline-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineColor renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textUnderlineColor renders valid theme path 1`] = `
Array [
  .c0 {
  text-underline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
